@startuml
'https://plantuml.com/class-diagram

class HoaDon {
    # HoaDon(Builder b)
}
class Builder {
    + Builder buildHeader(String id, String ngayBan, String tenKh)
    + Builder addCTHD(String sanPham, int soLuong, int donGia, float chietKhau)
    + HoaDon build()
}
class HoaDonHeader
class CTHD

Builder ..> HoaDon
HoaDon --> HoaDonHeader: header
HoaDon *--> CTHD: cthds
Builder --> HoaDonHeader : header
Builder *--> CTHD: cthds
@enduml